--- a/calculator.css
+++ b/calculator.css
@@ -6,6 +6,14 @@ table td .items {
     min-width: 500px;
 }
 
+table tbody tr:nth-child(odd) {
+    background-color: #f1f1f1;
+}
+
+table tbody tr:nth-child(even) {
+    background-color: #ffffff;
+}
+
 table td.total,
 table th.total {
     min-width: 100px;
